# raylib-boids

./: CMakeLists.txt  README.md  flake.nix  shell.nix
src/: main.cpp
